<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.knighthat.NoobHelper</groupId>
  <artifactId>NoobHelperPlugin</artifactId>
  <version>0.9.3</version>
  <name>Noob Helper</name>
  <description>Integrated many helpful features to make game easier to play	</description>

  <distributionManagement>
    <repository>
      <id>${project.name}</id>
      <name>plugins</name>
      <url>file:C:\Users\tanmi\.m2\repository\</url>
    </repository>
  </distributionManagement>

  <build>
    <defaultGoal>deploy</defaultGoal>
    <plugins>
      <plugin>    
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5</version>
        <configuration>
            <source>11</source>
            <target>11</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.source>11</maven.compiler.source>
  </properties>
  
  <repositories>
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>
  </repositories>
  
  <dependencies>

	<dependency>
      <groupId>com.destroystokyo.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.14-R0.1-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>com.destroystokyo.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.16.4-R0.1-SNAPSHOT</version>
    </dependency>

  </dependencies>

</project>